Added footers and new plea page (not finished) Fixed bug in index.js

--- a/views/home.html
+++ b/views/home.html
@@ -54,7 +54,10 @@
             <a class="nav-link" href="/signup">Sign Up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="/pleas" tabindex="-1" aria-disabled="true">Posts</a>
+            <a class="nav-link" href="/login">Log In</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="/pleas">Posts</a>
           </li>
         </ul>
         <form class="d-flex">
