--- a/views/page.html
+++ b/views/page.html
@@ -95,5 +95,9 @@
   <!-- Note: three cards. Currently using just three to show example layout. End cards here -->
   </div>
   </div>
+  <footer class="container">
+    <p class="float-end"><a href="#">Back to top</a></p>
+    <p>&copy; 2021 SoJS &middot; <a href="/site/privacy">Privacy</a> &middot; <a href="/site/terms">Terms</a></p>
+  </footer>
 </main>
 </body>
