--- a/views/login.html
+++ b/views/login.html
@@ -82,7 +82,7 @@
             <button type="submit" class="btn btn-primary btn-lg">Log In</button>
         </div>
     </form>
-	<div class="text-center">Don't have an account? <a href="/login">Sign Up here</a></div>
+	<div class="text-center">Don't have an account? <a href="/signup">Sign Up here</a></div>
 </div>
   
 
