--- a/views/login.html
+++ b/views/login.html
@@ -2,6 +2,30 @@
 <html lang="en">
 
 <head>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyC_miM2Wip6iNnPtsAezZisu_iOWwSk30I",
+    authDomain: "help-ab9d8.firebaseapp.com",
+    databaseURL: "https://help-ab9d8-default-rtdb.firebaseio.com",
+    projectId: "help-ab9d8",
+    storageBucket: "help-ab9d8.appspot.com",
+    messagingSenderId: "927805818418",
+    appId: "1:927805818418:web:c1907f4f036fb493605e2b",
+    measurementId: "G-NTRBCN0YVK"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
 	<meta name="theme-color" content="#9C9898">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
