--- a/views/new.html
+++ b/views/new.html
@@ -2,6 +2,30 @@
 <html lang="en">
 
 <head>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyC_miM2Wip6iNnPtsAezZisu_iOWwSk30I",
+    authDomain: "help-ab9d8.firebaseapp.com",
+    databaseURL: "https://help-ab9d8-default-rtdb.firebaseio.com",
+    projectId: "help-ab9d8",
+    storageBucket: "help-ab9d8.appspot.com",
+    messagingSenderId: "927805818418",
+    appId: "1:927805818418:web:c1907f4f036fb493605e2b",
+    measurementId: "G-NTRBCN0YVK"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="">
@@ -43,26 +67,23 @@
 	<header>
 		<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="#">Help!</a>
+				<a class="navbar-brand" href="/">Help!</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/~">Home</a>
+            <a class="nav-link" href="/home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/pleas">Posts</a>
+            <a class="nav-link active" 
+            aria-current="page" href="/signup">Sign Up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/logout" aria-disabled="true">Logout</a>
-          </li>
-          <li class = "nav-item">
-            <span class = "nav-link active">Logged in as: {{ username }}
+            <a class="nav-link " href="/pleas" >Posts</a>
           </li>
         </ul>
-
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
@@ -84,7 +105,7 @@
           <div class="row g-3">
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">Name</label>
-              <input class="form-control" id="exampleFormControlInput1" name = "name">
+              <input class="form-control" id="exampleFormControlInput1" name = "title">
             </div>
             <div class="mb-3">
               <label for="exampleFormControlTextarea1" class="form-label">Description</label>
