--- a/views/home.html
+++ b/views/home.html
@@ -3,24 +3,24 @@
 
 <head>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-analytics.js"></script>
 
 <script>
   // Your web app's Firebase configuration
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
   var firebaseConfig = {
-    apiKey: "AIzaSyC_miM2Wip6iNnPtsAezZisu_iOWwSk30I",
-    authDomain: "help-ab9d8.firebaseapp.com",
-    databaseURL: "https://help-ab9d8-default-rtdb.firebaseio.com",
-    projectId: "help-ab9d8",
-    storageBucket: "help-ab9d8.appspot.com",
-    messagingSenderId: "927805818418",
-    appId: "1:927805818418:web:c1907f4f036fb493605e2b",
-    measurementId: "G-NTRBCN0YVK"
+    apiKey: "AIzaSyCqqICGwZx5cheh2FRN2_emWDFmx1RzRE8",
+    authDomain: "help-38d77.firebaseapp.com",
+    projectId: "help-38d77",
+    storageBucket: "help-38d77.appspot.com",
+    messagingSenderId: "89380496627",
+    appId: "1:89380496627:web:770b5af07afa24535fc386",
+    measurementId: "G-50JHBCK55T"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
@@ -164,7 +164,7 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Find things easily<span class="text-muted"> Just Click "Search"</span></h2>
+        <h2 class="featurette-heading">Find things easily. <span class="text-muted"> Just Click "Search" (In Dev)</span></h2>
         <p class="lead">Lets say that you are interested in creating a chat room by the likes of discord. Instead of scrolling through endless pleas for help, simply look at the top right corner of the screen, type your query, and tap "search". Immediatly filter through hundreds of requests and find just the ones you want.</p>
       </div>
       <div class="col-md-5 order-md-1">
@@ -177,7 +177,7 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">How About Smaller Projects<span class="text-muted"> No Problem.</span></h2>
+        <h2 class="featurette-heading">How About Smaller Projects? <span class="text-muted"> No Problem. (in dev)</span></h2>
         <p class="lead">What if your project only needs one or two people? In that case, when you post a request, add a "people limit". This way, when you have all the help you want, the post deletes itself. No extra clicks or hassle needed.</p>
       </div>
       <div class="col-md-5">
