Pushed Login to firebase. Added Pleas page.

--- a/views/login.html
+++ b/views/login.html
@@ -75,14 +75,14 @@
 <div class="signup-form">
     <form action="/login" method="post">
 		<h2>Log In</h2>
-		<p>Log In to start creating!</p>
+		<p>Log In to start helping!</p>
 		<hr>
         <div class="form-group">
 			<div class="input-group">
 				<div class="input-group-prepend">
 					<span class="input-group-text">
 						<span class="fa fa-user"></span>
-            <input type="text" class="form-control" name="username" placeholder="Username" required="required">   
+            <input type="text" class="form-control" name="username" placeholder="Username" required="required" autofocus>   
 					</span> 
                           
 				</div>
