--- a/views/signup.html
+++ b/views/signup.html
@@ -81,7 +81,7 @@
 				<div class="input-group-prepend">
 					<span class="input-group-text">
 						<span class="fa fa-user"></span>
-            <input type="text" class="form-control" name="username" placeholder="Username" required="required">   
+            <input type="text" class="form-control" name="username" placeholder="Username" required="required" autofocus>   
 					</span> 
                           
 				</div>
