Added /pleas /pleas/{pleaID} Added Styling

--- a/views/page.html
+++ b/views/page.html
@@ -83,8 +83,7 @@
         </ul>
 
         <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <a class = "btn btn-primary" href="/new">+ New</a>
         </form>
       </div>
     </div>
