--- a/views/pleas.html
+++ b/views/pleas.html
@@ -25,6 +25,7 @@
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
 </script>
+<link rel = "stylesheet" href = "./css/tag-display.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -79,8 +80,7 @@
         </ul>
 
         <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <a class = "btn btn-primary" href="/new">+ New</a>
         </form>
       </div>
     </div>
@@ -89,7 +89,7 @@
 
 <main style = "margin: 20px;">
 
-  <h1><a class = "btn btn-primary" style = "float:right; "href="/new">+ New</a></h1>
+  
   
   <h1>Pleas:</h1>
   <div class = "container-fluid">
@@ -99,6 +99,12 @@
       <h5 class="card-title">{{ plea.title }}</h5>
       <h6 class="card-subtitle mb-2 text-muted">@{{ plea.author }}</h6>
       <p class="card-text">{{ plea.shortDes }}</p>
+      <p class = "text-muted">Tags</p>
+      <ul class = "tags">
+      {% for tag in plea.tags %}
+        <a href = "/search?q={{ tag }}"><li class = "tag">{{ tag }}</li></a>
+      {% endfor %}
+      </ul>
       <a href="/plea/{{ plea.key }}" class="btn btn-primary">View</a>
       </div>
       <hr>
