--- a/views/login.html
+++ b/views/login.html
@@ -72,7 +72,7 @@
 </header>
 
 <div class="signup-form">
-    <form action="/login" method="post">
+    <form action="/login" method="post" class = "form">
 		<h2>Log In</h2>
 		<p>Log In to start helping!</p>
 		<hr>
