--- a/views/css/sign.css
+++ b/views/css/sign.css
@@ -17,7 +17,7 @@ body {
 	margin: 0 auto;
 	padding: 30px 0;		
 }
-.signup-form form {
+.signup-form .form {
 	color: #999;
 	border-radius: 3px;
 	margin-bottom: 15px;
@@ -65,11 +65,11 @@ body {
 .signup-form a:hover {
 	text-decoration: none;
 }
-.signup-form form a {
+.signup-form .form a {
 	color: #19aa8d;
 	text-decoration: none;
 }	
-.signup-form form a:hover {
+.signup-form .form a:hover {
 	text-decoration: none;
 }
 .signup-form .fa {
