--- a/views/search.html
+++ b/views/search.html
@@ -98,7 +98,17 @@
 <main style = "margin: 20px;">
 
   
-  
+  {% if noresults %}
+  <div style = "text-align: center;  padding-bottom: 6px; position: fixed; top: 25%; bottom: 25%;left: 30%; right: 30%; width: 40%;height: 50%;"><h1 class = "display-3" >Pleas</h1><span class = "text-muted">Search for a plea</span>
+  <form action = "search" method = "GET" class = "form-inline">
+    <div class="form-group mx-sm-3 mb-2">
+    <input class="form-control" id="q" placeholder="Search"  name = "q">
+    <span class = "text-muted">Separate tags with spaces. Enter to search</span>
+    
+  </div>
+  </div>
+  </form>
+  {% else %}
   <div style = "text-align: center;  padding-bottom: 6px; width: 50%;position: relative; left: 25%; right: 25%;"><h1 class = "display-3" >Pleas</h1><span class = "text-muted">Search for a plea</span>
   <form action = "search" method = "GET" class = "form-inline">
     <div class="form-group mx-sm-3 mb-2">
@@ -110,7 +120,9 @@
   </form>
   <div class = "container-fluid">
   <!-- Cards -->
-  {% for plea in pleas %}
+  
+  
+  {% for plea in newOrder %}
     <div class="card-body">
       <h5 class="card-title">{{ plea.title }}</h5>
       <h6 class="card-subtitle mb-2 text-muted">@{{ plea.author }}</h6>
@@ -123,6 +135,9 @@
       </ul>
       <a href="/plea/{{ plea.key }}" class="btn btn-primary">View</a>
       </div>
+      {% if plea.notrelevant %}
+      <div class = "text-muted">This result is not very relevant. Please change your search to get more results</div>
+      {% endif %}
       <hr>
   {% endfor %}
   </div>
